# shema

./: Cargo.toml  README.md
src/: firehose.rs  lib.rs  parquet.rs  utils.rs
tests/: derive.rs
